fixed animation to fit on small screen"

--- a/source/src/app/index.scss
+++ b/source/src/app/index.scss
@@ -165,7 +165,7 @@ input[type='submit'] {
 
   &.robot {
     background-color: #FAC732;
-    width: 148px;
+    width: 188px;
     height: auto;
     color: black;
 
