--- a/source/src/assets/css/layerorder.css
+++ b/source/src/assets/css/layerorder.css
@@ -1,6 +1,3 @@
-#scene {
-  z-index: -1;
-}
 #bulb {
   z-index: -1;
 }
